# CodexMaMi

./: .gitignore  CHANGELOG.md  FEATURE_MATRIX.md  LICENSE  NOTICE  PRIVACY.md  README.md  RELEASE.md  package.json  server.mjs
.github/workflows/: windows-release.yml
desktop/: electron-main.cjs
public/: app.js  index.html  styles.css
scripts/: check-release-env.ps1  generate-icon.mjs  smoke-ui.mjs  start-dev-hidden.ps1  start-dev.ps1  sync-version.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test/: server.test.mjs
